<resources>
    <string name="app_name">FitnessProject</string>

    <!--Google maps API-->
    <string name="google_maps_API_key">AIzaSyAbLPQ-o5QoOhzULGTgxVR2IL0Wpre98Ms</string>

    <string name="request_execution_has_failed">Request execution has failed. Check your internet connection</string>

    <string name="login_button_enter">Login</string>
    <string name="login_button_password_recovery">Forgot password?</string>
    <string name="register_password">Password</string>
    <string name="login_button_register">Sign Up</string>

    <string name="register_email">E-mail</string>
    <string name="register_button_save_and_continue">Submit</string>
    <string name="register_password_repeat">Password repeat</string>
    <string name="register_first_name">First Name</string>
    <string name="register_second_name">Second Name</string>
    <string name="register_credentials_title">Register</string>
    <string name="register_gender">Gender:</string>
    <string name="register_gender_male">Male</string>
    <string name="register_gender_female">Female</string>

    <string name="menu_my_credentials">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="tab_workout">Workouts</string>
    <string name="tab_other">Other</string>

    <!-- Accessibility -->
    <string name="accessibility_open_nav_drawer">Открытие бокового меню</string>
    <string name="accessibility_close_nav_drawer">Закрытие бокового меню</string>
    <string name="edit_date">Date</string>
    <string name="edit_time">Time</string>
    <string name="edit_select_type">Select type</string>
    <string name="edit_distance">Distance (km)</string>
    <string name="edit_duration">Duration (min)</string>
    <string name="edit_calories">Calories (cal)</string>
    <string name="edit_date_workout_dialog_title">Workout date</string>
    <string name="login_error_empty_login">Login is empty</string>
    <string name="login_error_empty_password">Password is empty</string>
    <string name="register_error_empty_first_name">First name is empty</string>
    <string name="register_error_empty_second_name">Second name is empty</string>
    <string name="register_error_empty_email">Email is empty</string>
    <string name="register_error_empty_password">Password is empty</string>
    <string name="register_error_empty_password_repeat">Password is empty</string>
    <string name="register_error_wrong_password_repeat">Password is not repeat</string>
    <string name="credentials_user_title">User credentials</string>
    <string name="delete_action">Delete</string>
    <string name="cancel_action">Cancel</string>
    <string name="distance_intent">distance_intent</string>
    <string name="duration_intent">duration_intent</string>
    <string name="calories_intent">calories_intent</string>
    <string name="type_intent">type_intent</string>
    <string name="date_intent">date_intent</string>
    <string name="id_intent">id_intent</string>
    <string name="tab_clubs">Clubs</string>
</resources>
