<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivRegisterProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />
        <!--app:srcCompat="@drawable/register_progress_1"-->

        <TextView
            android:id="@+id/tvRegisterCredentialsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivRegisterProgress"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/credentials_user_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRegisterCredentialsTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_first_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilFirstName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_second_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvGenderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tilFirstName"
            android:layout_alignLeft="@+id/tilFirstName"
            android:layout_alignRight="@+id/tilFirstName"
            android:layout_alignStart="@+id/tilFirstName"
            android:layout_below="@id/tilSecondName"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/register_gender"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tilFirstName"
            android:layout_alignLeft="@+id/tilFirstName"
            android:layout_alignRight="@+id/tilFirstName"
            android:layout_alignStart="@+id/tilFirstName"
            android:layout_below="@id/tvGenderTitle"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/register_gender_male"
                android:textColor="@color/textSecondary" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/register_gender_female"
                android:textColor="@color/textSecondary" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/rgGender"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_dark_gradient"
                android:elevation="4dp"
                android:text="@string/register_button_save_and_continue"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>