<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivRegisterProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />
        <!--app:srcCompat="@drawable/register_progress_1"-->

        <TextView
            android:id="@+id/tvRegisterCredentialsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivRegisterProgress"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/register_credentials_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRegisterCredentialsTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_first_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilFirstName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_second_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tilSecondName"
            android:layout_alignLeft="@+id/tilSecondName"
            android:layout_alignRight="@+id/tilSecondName"
            android:layout_alignStart="@+id/tilSecondName"
            android:layout_below="@+id/tilSecondName">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tilEmail"
            android:layout_alignLeft="@+id/tilEmail"
            android:layout_alignRight="@+id/tilEmail"
            android:layout_alignStart="@+id/tilEmail"
            android:layout_below="@+id/tilEmail">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tilPassword"
            android:layout_alignLeft="@+id/tilPassword"
            android:layout_alignRight="@+id/tilPassword"
            android:layout_alignStart="@+id/tilPassword"
            android:layout_below="@id/tilPassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_password_repeat"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/tilPasswordRepeat"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSubmitContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_dark_gradient"
                android:elevation="4dp"
                android:text="@string/register_button_save_and_continue"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>