<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/flLogoContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginBottom="48dp"
                android:src="@drawable/logo"
                android:tint="@android:color/white" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/sign_up_bg_color">

        <TextView
            android:id="@+id/tvRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/login_button_register"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/rlCredentialsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/login_frame_background"
            android:padding="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/register_email"
                    android:inputType="textEmailAddress"
                    android:text="admin@fitness.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilEmail"
                android:layout_alignLeft="@id/tilEmail"
                android:layout_alignRight="@id/tilEmail"
                android:layout_marginTop="16dp"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    android:text="123321"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPasswordRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilPassword"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:text="@string/login_button_password_recovery"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnEnter"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_dark_gradient"
            android:text="@string/login_button_enter"
            android:textColor="@android:color/white" />
    </FrameLayout>
</RelativeLayout>